--- a/hscript.cabal
+++ b/hscript.cabal
@@ -8,9 +8,28 @@ build-type:    Simple
 
 executable hscript
   main-is: Main.hs
-  other-modules: HScript.Parse
-                 HScript.Transform
-                 HScript.Run
+  build-depends:      base >= 4 && < 5,
+                      megaparsec >= 9.0  && < 10,
+                      hscript,
+                      text >= 1.2  && < 3,
+                      process >= 1.6  && < 1.8,
+                      directory>= 1.3  && < 1.4,
+                      filepath >= 1.4  && < 1.6,
+                      temporary >= 1.3  && < 1.4
+  hs-source-dirs:     src,
+                      app
+  default-extensions: OverloadedStrings
+                      RecordWildCards
+  ghc-options:        -Wall
+  default-language:   Haskell2010
+
+library
+  exposed-modules: HScript.Parse,
+                   HScript.Transform,
+                   HScript.Run,
+                   HScript.Markdown,
+                   HScript.Notebook,
+                   HScript.Resolve
   build-depends:      base >= 4 && < 5,
                       megaparsec >= 9.0  && < 10,
                       text >= 1.2  && < 3,
@@ -24,3 +43,20 @@ executable hscript
                       RecordWildCards
   ghc-options:        -Wall
   default-language:   Haskell2010
+
+test-suite hscript-tests
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules: Test.Parse,
+                 Test.Transform,
+                 Test.Markdown,
+                 Test.Integration
+  build-depends: base >= 4 && < 5,
+                 text >= 1.2  && < 2.2,
+                 hscript,
+                 tasty >= 1.4  && < 1.6,
+                 tasty-hunit  >= 0.10 && < 0.11
+  hs-source-dirs:     test
+  default-language:   Haskell2010
+  default-extensions: OverloadedStrings
+  ghc-options:        -Wall
